# JobFinder

./: .dockerignore  .env.example  .gitignore  AI_HANDOFF.md  Development.md  Dockerfile  README.md  docker-compose.yml  job_recommender_project_plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py  state.py
api/routes/: analytics.py  applications.py  jobs.py  resume.py
app/: streamlit_app.py
app/components/: __init__.py  feedback.py  filters.py  job_card.py  resume_upload.py  skill_gap.py
jobhunt/: App.tsx  README.md  constants.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  store.ts  types.ts
jobhunt/api/: client.ts  endpoints.ts
jobhunt/components/: CommandPalette.tsx  FilterPanel.tsx  JobCard.tsx  JobDetail.tsx  Sidebar.tsx  TopBar.tsx
jobhunt/hooks/: index.ts  useAnalytics.ts  useApplications.ts  useJobs.ts  useResumeProfile.ts
jobhunt/views/: Analytics.tsx  Applications.tsx  Dashboard.tsx  JobSearch.tsx  ResumeView.tsx  Settings.tsx
scripts/: build_vector_index.py  collect_all_jobs.py  collect_jobs.py  setup_db.py  setup_local.py
src/data_collection/: __init__.py  adzuna_client.py  schema.py
src/db/: __init__.py  metadata_db.py  vector_db.py
src/evaluation/: __init__.py  metrics.py
src/matching/: __init__.py  embeddings.py  evidence.py  scorer.py
src/processing/: __init__.py  pdf_parser.py  text_cleaner.py
src/utils/: __init__.py  config.py  logger.py
tests/: conftest.py  test_evidence.py  test_metadata_db.py  test_scorer.py  test_search_pipeline.py  test_text_cleaner.py
